# Robotics

./: frames.gv
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/lla2enu/: custom_msg.h  distance.h  distanceRequest.h  distanceResponse.h  sliderConfig.h
devel/include/slider_reconfigure/: sliderConfig.h
devel/lib/lla2enu/: client  server  service  subscriber  subscriber_front  subscriber_node  subscriber_obs
devel/lib/message_filters_example/: filter_subscriber  filter_subscriber_policy  multi_publisher
devel/lib/pkgconfig/: lla2enu.pc  message_filters_example.pc  service.pc  slider_reconfigure.pc  tf_front.pc  tf_publisher.pc
devel/lib/python2.7/dist-packages/lla2enu/cfg/: sliderConfig.py
devel/lib/python2.7/dist-packages/lla2enu/msg/: _custom_msg.py
devel/lib/tf_front/: tf_front_publisher
devel/lib/tf_publisher/: tf_front_publisher  tf_obs_publisher  tf_publisher
devel/share/lla2enu/cmake/: lla2enu-msg-extras.cmake  lla2enu-msg-paths.cmake  lla2enuConfig.cmake
devel/share/lla2enu/docs/: sliderConfig-usage.dox  sliderConfig.dox  sliderConfig.wikidoc
devel/share/message_filters_example/cmake/: message_filters_exampleConfig.cmake
devel/share/roseus/ros/lla2enu/: manifest.l
devel/share/service/cmake/: service-msg-extras.cmake  serviceConfig.cmake
devel/share/slider_reconfigure/cmake/: slider_reconfigureConfig.cmake
devel/share/slider_reconfigure/docs/: sliderConfig-usage.dox  sliderConfig.dox  sliderConfig.wikidoc
devel/share/tf_front/cmake/: tf_frontConfig.cmake
devel/share/tf_publisher/cmake/: tf_publisherConfig.cmake
localization/: CMakeLists.txt  READ ME.txt  package.xml
localization/launch/: amcl.launch  amcl.launch.xml  optitrack.launch  optitrackGmapping.launch.xml  visualOdom.launch  visualOdomGmapping.launch.xml
localization/maps/: map.pgm  optimap.pgm  optimap.yaml
localization/rviz/: amcl.rviz  optitrack.rviz  visualOdom.rviz
src/: README.txt  frames.gv  info.txt  screenshot
src/launch/: launcher.launch
src/lla2enu/: CMakeLists.txt  package.xml
src/lla2enu/cfg/: slider.cfg
src/lla2enu/launch/: launcher.launch
src/lla2enu/msg/: custom_msg.msg
src/lla2enu/src/: client.cpp  prova.cpp  server.cpp  service.cpp  sub_front.cpp  subscriber_front.cpp  subscriber_node.cpp  subscriber_obs.cpp
src/lla2enu/srv/: distance.srv
src/tf_front/: CMakeLists.txt
src/tf_front/src/: tf_front_publisher.cpp
src/tf_publisher/: CMakeLists.txt
src/tf_publisher/src/: tf_front_publisher.cpp  tf_obs_publisher.cpp  tf_publisher.cpp
(+16 files in other folders)
